css/custom.css
@import url('https://fonts.googleapis.com/css?family=Borel');
@import url('https://fonts.googleapis.com/css?family=Tektur:400,700');
@import url('https://fonts.googleapis.com/css?family=Instrument%20Serif');
@import url('https://fonts.googleapis.com/css?family=Bodoni%20Moda:400,700,900');
@import url('https://fonts.googleapis.com/css?family=Libre%20Bodoni:400,700');

body {
    font-family: 'Bodoni Moda';
}

.handwriting {
    font-family: 'Borel';
}

.folded {
    font-family: 'Tektur';
}

.folded.bold {
    font-weight: 700;
}

.fancy {
    font-family: 'Instrument Serif';
    font-weight: 400;
}

.bodoni-thick {
    font-family: 'Libre Bodni';
    font-weight: 400;
}

.bodoni-thick.bold {
    font-weight: 700;
}

.bodoni-thin {
    font-family: 'Bodoni Moda';
    
}

.bodoni-thin.bold {
    font-weight: 700;
}

.bodoni-thin.extrabold {
    font-weight: 900;
}

.navbar-brand, .nav-item {
    color: var(--bs-body-color)
}

footer div {
    background-color: var(--bs-pastelBlue);
}

[data-bs-theme=light] .navbar-adaptive {
    background-color: var(--bs-pastelBlue);
}

[data-bs-theme=dark] .navbar-adaptive {
    background-color: var(--bs-dark-bg-subtle);
}

.text-xs-left { text-align: left; }
.text-xs-right { text-align: right; }
.text-xs-center { text-align: center; }
.text-xs-justify { text-align: justify; }

@media (min-width: 768px) {
    .text-sm-left { text-align: left; }
    .text-sm-right { text-align: right; }
    .text-sm-center { text-align: center; }
    .text-sm-justify { text-align: justify; }
}

@media (min-width: 992px) {
    .text-md-left { text-align: left; }
    .text-md-right { text-align: right; }
    .text-md-center { text-align: center; }
    .text-md-justify { text-align: justify; }
}

@media (min-width: 1200px) {
    .text-lg-left { text-align: left; }
    .text-lg-right { text-align: right; }
    .text-lg-center { text-align: center; }
    .text-lg-justify { text-align: justify; }
}

.font-stretch {
    display: inline-block;
    -webkit-transform: scale(1.15,1);
    -moz-transform: scale(1.15,1);
    -ms-transform: scale(1.15,1);
    -o-transform: scale(1.15,1);
    transform: scale(1.15,1);
}

.bounce span{
    position:relative;
    top:0px;
    animation:bounce .25s ease-in-out infinite alternate;
    animation-iteration-count: 2;
} 
.bounce span:nth-child(2){animation-delay: .1s;}
.bounce span:nth-child(3){animation-delay: .2s;}
.bounce span:nth-child(4){animation-delay: .3s;}
.bounce span:nth-child(5){animation-delay: .4s;}
.bounce span:nth-child(6){animation-delay: .5s;}
.bounce span:nth-child(7){animation-delay: .6s;}
.bounce span:nth-child(8){animation-delay: .7s;}
.bounce span:nth-child(9){animation-delay: .8s;}
.bounce span:nth-child(10){animation-delay: .9s;}
.bounce span:nth-child(11){animation-delay: 1s;}
@keyframes bounce{
    100%{
        top:-15px;
    }
}

a.subtle{
    color: var(--bs-body-color)
}

